# supervisord-tauri

./: .env  .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: build_release.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  network.rs  server.rs
src/i18n/: index.ts  lang.json
src/i18n/en/: common.json  home.json  hosts.json  index.ts  nav.json  program.json
src/i18n/zh/: common.json  hosts.json  index.ts  nav.json  program.json
src/lib/directives/: copy.ts
src/lib/services/: abcClient.ts  baseClient.ts  index.ts  logtail.ts  metrics.ts  program.ts  supervisor.ts
src/lib/store/: hosts.model.ts  index.ts  process.model.ts  settings.model.ts
src/lib/types/: program.ts  supervisord.ts
src/lib/utils/: save.ts
src/lib/widgets/: AddHostDialog.svelte  AsideNavs.svelte  Breadcrumbs.svelte  HostsDashboard.svelte  HostsManager.svelte  HostsManagerTable.svelte  LangSelector.svelte  ProgramsManager.svelte  ProgramsTable.svelte  SettingDialog.svelte
src/lib/widgets/HostsManagerWidgets/: HostsManagerTableCheckbox.svelte  HostsTable.svelte  HostsTableAction.svelte
src/lib/widgets/ProgramsManagerWidgets/: HostConfEditor.svelte  ProgramsTable.svelte  ProgramsTableControl.svelte  ProgramsTableStatusBadge.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/host/: +page.svelte
src/services/: index.ts  metrics.ts  program.ts  supervisor.ts
static/: every_daily.txt
(+3 files in other folders)
